@@ -1,3 +1,11 @@
+2011-06-05  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	Backport from mainline
+	2011-05-30  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	PR target/49186
+	* gcc.c-torture/execute/pr49186.c: New.
+
 2011-06-04  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
         PR c++/33840
